--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
 <body>
     <!--HEADER-->
     <header>
-        <!-- <nav>
-            <a href="#" class="logo"><img src="/ressources/images/logo/Reservia.svg" alt="Logo Reservia"></a>
-            <ul>
-                <li class="active"><a href="#hebergements">Hébergements</a></li>
-                <li class="hover"><a href="#activites">Activités</a></li>
-                <li><a href="#" class="suscribe">S'inscrire</a></li>
-            </ul>
-        </nav> -->
+        <nav>
+            <div class="nav-logo"><a href="#"><img src="ressources/images/logo/Reservia.svg" alt="Logo Reservia"></a></div>
+            <div class="nav-hebergements"><a href="#hebergements">Hébergements</a></div>
+            <div class="nav-activites"><a href="#activites">Activités</a></div>
+            <div class="nav-suscribe"><a href="#">S'inscrire</a></div>
+        </nav>
     </header>
 
     <main>
@@ -68,13 +66,13 @@
                             </div>
                             <div class="card-text">
                                 <h3>Auberge de la Cannebière</h3>
-                                <p>Nuit à partir de 25€</p>
+                                <p>Nuit à partir de 25<strong>€</strong></p>
                                 <div>
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
-                                    <i class="fa fa-star grey"></i>
+                                    <i class="fa fa-star gray"></i>
                                 </div>
                             </div>
                         </article>
@@ -86,7 +84,7 @@
                             </div>
                             <div class="card-text">
                                 <h3>Hôtel du Port</h3>
-                                <p>Nuit à partir de 52€</p>
+                                <p>Nuit à partir de 52<strong>€</strong></p>
                                 <div>
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
@@ -104,7 +102,7 @@
                             </div>
                             <div class="card-text">
                                 <h3>Hôtel les Mouettes</h3>
-                                <p>Nuit à partir de 76€</p>
+                                <p>Nuit à partir de 76<strong>€</strong></p>
                                 <div>
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
@@ -122,7 +120,7 @@
                                 </div>
                                 <div class="card-text">
                                     <h3>Auberge de la Mer</h3>
-                                    <p>Nuit à partir de 46€</p>
+                                    <p>Nuit à partir de 46<strong>€</strong></p>
                                     <div>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
@@ -140,7 +138,7 @@
                             </div>
                             <div class="card-text">
                                 <h3>Auberge le Panier</h3>
-                                <p>Nuit à partir de 23€</p>
+                                <p>Nuit à partir de 23<strong>€</strong></p>
                                 <div>
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
@@ -158,7 +156,7 @@
                             </div>
                             <div class="card-text">
                                 <h3>Hôtel chez Amina</h3>
-                                <p>Nuit à partir de 96€</p>
+                                <p>Nuit à partir de 96<strong>€</strong></p>
                                 <div>
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
@@ -224,8 +222,8 @@
                             </div>
                             <div class="card-text-pop">
                                 <h3>Hôtel Tout bleu et blanc</h3>
-                                <p>Nuit à partir de 68<strong>€</strong>€</p>
-                                <div>
+                                <p>Nuit à partir de 68<strong>€</strong></p>
+                                <div class="icons-text">
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
